Add chicken stir fry image & recipe

--- a/recipes/chicken-stir-fry.html
+++ b/recipes/chicken-stir-fry.html
@@ -13,6 +13,45 @@
   <body>
 
     <h1>Chicken Stir Fry</h1>
+    
+    <img src="../images/chicken-stir-fry.jpg" alt="a bowl of chicken stir fry with rice" width="500">
+
+    <h2>Description</h2>
+
+    <p>This chicken stir fry is simple to make, costs very little, and, most importantly, tastes amazing. Five minutes prep and 15 minutes cooking time makes it all the more appealing. One of the best things about a stir fry like this is its flexibility. You can easily substitute the chicken for another meat or vegetarian option of your choosing to keep it interesting. Play around with the vegetables and spices and you could easily have this every night of the week. Serve with rice, noodles or pasta? Its up to you. It helps that its healthy too.</p>
+
+    <h2>Ingredients</h2>
+
+    <ul>
+
+      <li>Coconut oil</li>
+      <li>Chicken</li>
+      <li>Rice</li>
+      <li>Onion</li>
+      <li>Garlic</li>
+      <li>Mixed Peppers</li>
+      <li>Scallions</li>
+      <li>Red Chilli</li>
+      <li>Dark Soy sauce</li>
+      <li>Sweet Chilli Sauce</li>
+      <li>Smoked Paprika</li>
+      <li>Chilli Powder</li>
+      <li>Dark Soy sauce</li>
+
+    </ul>
+
+    <h2>Steps</h2>
+
+    <ol>
+
+      <li>While the rice is cooking, cut the chicken into strips, fry with the coconut oil until cooked, and set aside</li>
+      <li>Chop all the veg, and stir fry for five minutes with more of the oil</li>
+      <li>Add the chicken back in</li>
+      <li>Add some soy sauce, sweet chilli sauce, all of the spices and continue to cook for five minutes</li>
+      <li>Put some rice in a bowl and spoon over the cooked chicken and vegetables</li>
+      <li>Enjoy!</li>
+
+    </ol>
 
   </body>
   
