Add chicken fajita recipe html with links and image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
   <body>
 
     <h1>Odin Recipes</h1>
-    <a href="recipes/chicken-stir-fry.html">Chicken Stir Fry</a>
+
+    <ul>
+      
+      <li><a href="recipes/chicken-stir-fry.html">Chicken Stir Fry</a></li>
+      <li><a href="recipes/chicken-fajitas.html">Chicken Fajitas</a></li>
+  
+    </ul>
 
   </body>
   
