--- a/recipes/chicken-stir-fry.html
+++ b/recipes/chicken-stir-fry.html
@@ -12,6 +12,7 @@
 
   <body>
 
+    <a href="../index.html">Home</a>
     <h1>Chicken Stir Fry</h1>
     
     <img src="../images/chicken-stir-fry.jpg" alt="a bowl of chicken stir fry with rice" width="500">
