Add scrambled egss recipe html with links and image

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       
       <li><a href="recipes/chicken-stir-fry.html">Chicken Stir Fry</a></li>
       <li><a href="recipes/chicken-fajitas.html">Chicken Fajitas</a></li>
+      <li><a href="recipes/scrambled-eggs.html">Scrambled Eggs</a></li>
   
     </ul>
 
