Add basic CSS styling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 
   </head>
 
@@ -14,7 +15,7 @@
 
     <h1>Odin Recipes</h1>
 
-    <ul>
+    <ul id="unordered-list"  class="unordered">
       
       <li><a href="recipes/chicken-stir-fry.html">Chicken Stir Fry</a></li>
       <li><a href="recipes/chicken-fajitas.html">Chicken Fajitas</a></li>
