--- a/recipes/chicken-stir-fry.html
+++ b/recipes/chicken-stir-fry.html
@@ -6,6 +6,7 @@
 
     <meta charset="UTF-8">
     <title>Chicken Stir Fry Recipe</title>
+    <link rel="stylesheet" href="../style.css">
 
   </head>
 
